samples/_failures_safe/1761284086_2ae63d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd1fd468.c: In function ‘main’:
./samples/SAFE/__tmp_dd1fd468.c:136:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  136 |     Matrix mat
      |     ^~~~~~
./samples/SAFE/__tmp_dd1fd468.c:136:5: error: expected declaration or statement at end of input
